<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TableLayout
        android:id="@+id/MathTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0sp">
	    <TableRow 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:id="@+id/upMathButtons">
	        <ImageView 
		        android:contentDescription="@string/icon_up"
	            android:id="@+id/upOp1Image" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:src="@drawable/clockup">
	        </ImageView>
	        <TextView>
	        </TextView>
   	        <ImageView 
		        android:contentDescription="@string/icon_up"
	            android:id="@+id/upOp2Image" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:src="@drawable/clockup">
	        </ImageView>
	    </TableRow>
	    <TableRow 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:id="@+id/operatorRow">
	        <TextView 
	            android:padding="5dip" 
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
	            android:textColor="#FF0000"
	            android:id="@+id/mathOp1" 
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_gravity="right"
	            android:text="@string/number_one" 
	            android:textSize="100sp">
	        </TextView>
	        <TextView 
	            android:padding="5dip" 
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
	            android:textColor="#FF0000"
	            android:id="@+id/operator" 
	            android:textAppearance="?android:attr/textAppearanceLarge" 
	            android:text="@string/plus_sign"
	            android:textSize="75sp">
	        </TextView>
	        <TextView 
	            android:padding="5dip" 
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
	            android:textColor="#FF0000"
	            android:id="@+id/mathOp2" 
	            android:textAppearance="?android:attr/textAppearanceLarge" 
	            android:text="@string/number_one" 
	            android:textSize="100sp">
	        </TextView>
	        <TextView 
	            android:padding="5dip" 
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
	            android:textColor="#FF0000"
	            android:id="@+id/equals" 
	            android:textAppearance="?android:attr/textAppearanceLarge" 
	            android:text="@string/equals_sign" 
	            android:textSize="100sp">
	        </TextView>
   	        <TextView 
	            android:padding="5dip" 
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
	            android:textColor="#FF0000"
	            android:id="@+id/answer" 
	            android:textAppearance="?android:attr/textAppearanceLarge" 
	            android:text="@string/number_two" 
	            android:textSize="100sp">
	        </TextView>
	    </TableRow>
	    <TableRow 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_gravity="center_horizontal"
	        android:id="@+id/downMathButtons">
	        <ImageView 
		        android:contentDescription="@string/icon_down"
	            android:id="@+id/downOp1Image" 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:src="@drawable/clockdown">
	        </ImageView>
	        <TextView>
	        </TextView>
	        <ImageView 
		        android:contentDescription="@string/icon_down"
	            android:id="@+id/downOp2Image" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:src="@drawable/clockdown">
	        </ImageView>
   	    </TableRow>
	</TableLayout>
</LinearLayout>
