<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView 
        android:padding="5dip" 
     	android:layout_width="fill_parent" 
     	android:layout_height="fill_parent" 
        android:textColor="#00FF00"
        android:id="@+id/yae" 
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:textSize="100sp">
    </TextView>
    <TableRow 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:paddingBottom="10sp" 
        android:id="@+id/row1">
	    <ImageView 
   	        android:contentDescription="@string/icon_shapes"
	        android:id="@+id/leftImg1" 
	        android:paddingRight="10sp"
	        android:layout_gravity="left"
	        android:src="@drawable/icon_shapes"
	        android:layout_weight="0.5"
	        android:layout_width="50sp"
	        android:layout_height="50sp">
		</ImageView>    
        <ImageView 
   	        android:contentDescription="@string/icon_rate"
	        android:id="@+id/rightImg3" 
	        android:paddingLeft="10sp"
	        android:layout_gravity="right"
	        android:src="@drawable/icon_rate" 
	        android:layout_weight="0.5"
	        android:layout_width="50sp"
	        android:layout_height="50sp">
		</ImageView>    
	</TableRow>
    <TableRow 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingBottom="10sp" 
        android:id="@+id/row2">
	    <ImageView 
   	        android:contentDescription="@string/icon_spelling"
	        android:id="@+id/leftImg2" 
	        android:paddingRight="10sp"
	        android:layout_gravity="left"
	        android:src="@drawable/icon_spelling"
	        android:layout_weight="0.5"
	        android:layout_width="50sp"
	        android:layout_height="50sp">
		</ImageView>    
        <ImageView 
   	        android:contentDescription="@string/icon_sounds"
	        android:id="@+id/rightImg5" 
	        android:paddingLeft="10sp"
	        android:layout_gravity="right"
	        android:src="@drawable/icon_sounds" 
	        android:layout_weight="0.5"
	        android:layout_width="50sp"
	        android:layout_height="50sp">
		</ImageView>    
	</TableRow>
    <TableRow 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingBottom="10sp" 
        android:id="@+id/row3">
    	<ImageView 
   	        android:contentDescription="@string/icon_rate"
	        android:id="@+id/leftImg3" 
	        android:paddingRight="10sp"
	        android:layout_gravity="left"
	        android:src="@drawable/icon_rate" 
	        android:layout_weight="0.5"
	        android:layout_width="50sp"
	        android:layout_height="50sp">
		</ImageView>    
	    <ImageView 
   	        android:contentDescription="@string/icon_colors"
	        android:id="@+id/rightImg4" 
	        android:paddingLeft="10sp"
	        android:layout_gravity="right"
	        android:src="@drawable/icon_colors" 
	        android:layout_weight="0.5"
	        android:layout_width="50sp"
	        android:layout_height="50sp">
		</ImageView>    
    </TableRow>
    <TableRow 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingBottom="10sp" 
        android:id="@+id/row4">
    	<ImageView 
   	        android:contentDescription="@string/icon_colors"
	        android:id="@+id/leftImg4" 
	        android:paddingRight="10sp"
	        android:layout_gravity="left"
	        android:src="@drawable/icon_colors" 
	        android:layout_weight="0.5"
	        android:layout_width="50sp"
	        android:layout_height="50sp">
		</ImageView>    
   	    <ImageView 
   	        android:contentDescription="@string/icon_shapes"
	        android:id="@+id/rightImg1" 
	        android:paddingLeft="10sp"
	        android:layout_gravity="right"
	        android:src="@drawable/icon_shapes"
	        android:layout_weight="0.5"
	        android:layout_width="50sp"
	        android:layout_height="50sp">
		</ImageView>    
    </TableRow>
    <TableRow 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingBottom="10sp" 
        android:id="@+id/row5">
    	<ImageView 
   	        android:contentDescription="@string/icon_sounds"
	        android:id="@+id/leftImg5" 
	        android:paddingRight="10sp"
	        android:layout_gravity="left"
	        android:src="@drawable/icon_sounds" 
	        android:layout_weight="0.5"
	        android:layout_width="50sp"
	        android:layout_height="50sp">
		</ImageView>    
	    <ImageView 
   	        android:contentDescription="@string/icon_spelling"
	        android:id="@+id/rightImg2" 
	        android:paddingLeft="10sp"
	        android:layout_gravity="right"
	        android:src="@drawable/icon_spelling" 
	        android:layout_weight="0.5"
	        android:layout_width="50sp"
	        android:layout_height="50sp">
		</ImageView>    
    </TableRow>
</LinearLayout>